// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Checkbox /> without crashing 1`] = `
<label
  className="o-form__toggle o-form__toggle--checkbox"
>
  <input
    className="o-form__toggle-input"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="o-form__toggle-icon"
  />
</label>
`;

exports[`Renders <Radio /> without crashing 1`] = `
<label
  className="o-form__toggle o-form__toggle--radio"
>
  <input
    className="o-form__toggle-input"
    onChange={[Function]}
    type="radio"
  />
  <span
    className="o-form__toggle-icon"
  />
</label>
`;
